# COFFI

./: CMakeLists.txt
benchmarks/: CMakeLists.txt  coffi_bench.cpp
coffi/: coffi.hpp  coffi_directory.hpp  coffi_headers.hpp  coffi_import.hpp  coffi_relocation.hpp  coffi_section.hpp  coffi_strings.hpp  coffi_symbols.hpp  coffi_types.hpp  coffi_utils.hpp
coffi-modern/: CMakeLists.txt  MIGRATION.md  README.md
coffi-modern/examples/: CMakeLists.txt  dump_imports.cpp  dump_symbols.cpp  pe_info.cpp
coffi-modern/include/coffi/: coffi.hpp
coffi-modern/include/coffi/core/: byte_view.hpp  endian.hpp  error.hpp  lazy.hpp  result.hpp  safe_math.hpp
coffi-modern/include/coffi/editor/: coff_editor.hpp  data_builder.hpp  import_builder.hpp  layout.hpp  section_entry.hpp  string_table_builder.hpp  symbol_entry.hpp
coffi-modern/include/coffi/platform/: schema.hpp  traits.hpp
coffi-modern/include/coffi/views/: import_view.hpp  rva_resolver.hpp  section_view.hpp  string_table.hpp  symbol_view.hpp
coffi-modern/tests/: CMakeLists.txt  coff_file_test.cpp  core_test.cpp  editor_test.cpp  lazy_test.cpp  schema_test.cpp  view_test.cpp
tests/: CMakeLists.txt  coffi_import_test.cpp
